--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/glew"]
 	path = lib/glew
-	url = https://github.com/native-toolkit/glew.git
+	url = https://github.com/ceramic-engine/glew.git
